[project]
name = "pyspark-data-provenance"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark==4.0.0",
]

[dependency-groups]
notebooks = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyspark_data_provenance"]
force-include = { "src/pyspark_data_provenance/jars" = "pyspark_data_provenance/jars" }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"